--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"mocha": "^8.1.3",
 		"mongoose": "^7.0.4"
 	},
+	"engines": {
+		"node": "^14.20.1"
+	  },
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-issuetracker"
