--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mocha": "^8.1.3",
+		"mongodb": "^5.3.0",
 		"mongoose": "^7.0.4"
 	},
 	"engines": {
